# jongalab

./: .gitignore  AGENTS.md  README.md  refresh_tokens.sh
jongalab/: README.md  (+2 more)
trading/: README.md  api.py  pyproject.toml  test_live_buy.py
trading/core/: __init__.py  config.py  db.py  execution_engine.py  fill_sync.py  futures_gate.py  kiwoom_data_client.py  kiwoom_order_client.py  notifications.py  order_maintenance.py  position_manager.py  regime_gate.py  risk_engine.py  seed_allocator.py
trading/core/repository/: __init__.py  audit_log.py  blocklist.py  fill.py  kiwoom_token.py  order.py  position.py  risk_config.py  risk_state.py  settle_plan.py  trade_signal.py
trading/frontend/: .gitignore  middleware.ts  package-lock.json  package.json
trading/frontend/app/: globals.css  layout.tsx  page.tsx
trading/frontend/app/calendar/: page.tsx
trading/frontend/app/history/: page.tsx
trading/frontend/app/login/: page.tsx
trading/frontend/app/monitor/: page.tsx
trading/frontend/components/: AuthGate.tsx  BottomTabs.tsx  MinuteChart.tsx  MonitorView.tsx  ReasonTip.tsx  RoundTrips.tsx  StockLogModal.tsx  ThemeToggle.tsx
trading/frontend/lib/: api.ts  events.ts  format.ts
trading/frontend/types/: index.ts
trading/sql/: 1. create_database.sql  2. create_table.sql
trading/tests/: conftest.py  test_execution_engine.py  test_futures_gate.py  test_monitor.py  test_regime_gate.py  test_risk_engine.py  test_seed_allocator.py  test_settle.py  test_watchdog.py
trading/workers/: fills_sync.py  monitor.py  reconcile.py  settle.py  signal_executor.py  watchdog.py
(+161 files in other folders)
