[project]
name = "trading"
version = "0.1.0"
description = "Auto-trading execution server (order/position/risk) — kiwoom REST 직접 주문"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.2",
    "mysql-connector-python>=9.5.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "workers"]
