[project]
name = "trading"
version = "0.1.0"
description = "Auto-trading execution server (order/position/risk) — kiwoom REST 직접 주문"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.2",
    "mysql-connector-python>=9.5.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "workers"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
# 자금 경로(money-path) 순수 로직 단위 테스트. DB/네트워크 없이 fake 주입으로 동작을 고정한다.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
